--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "cron": "3.1.7",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "mysql2": "3.11.0",
     "sequelize": "6.37.3"
